MS Update 7 (Added all Products IMG)

--- a/main.html
+++ b/main.html
@@ -168,7 +168,6 @@
       </div>         
     </nav>
   </header>
-
   <main>
     <section class="ms-main-banner-sect">
       <div class="ms-main-banner">
@@ -204,7 +203,7 @@
             </div>  
           </div>
           <div class="ms-main-prd-dvm">
-            <a class="ms-main-prd-avm" href="https://misionessabor.com/pages/shop.html">Ver Más</a>
+            <a class="ms-main-prd-avm" href="https://misionessabor.com/pages/shop">Ver Más</a>
           </div>
         </div>
         <div class="glide__track" data-glide-el="track">
@@ -624,7 +623,6 @@
       </div>
     </section>
   </main>
-
   <footer>
     <div class="gp-footer">
       <div class="column logo">
