--- a/pages/shop.html
+++ b/pages/shop.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/featured-products.css">
-    <link rel="stylesheet" href="../styles/theme.scss.css">
-    <link rel="stylesheet" href="../styles/ms.css">
-    <link rel="stylesheet" href="../styles/shop.css">
-    <link rel="stylesheet" href="../styles/header.css">
-    <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/announcement-bar.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/featured-products.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/theme.scss.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/ms.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/shop.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/header.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css">
     <title>Compre nuestra colección entera de hierbas | Misiones Sabor</title>
 </head>
-
 <body>
     <header>
         <div id="ms-announcement-bar">
@@ -129,7 +127,7 @@
                                                 <div class="list-view-item__image-column">
                                                     <div
                                                         class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                        <img src="" alt="IMG1">
+                                                        <img src="https://misionessabor.com/images/products/Carqueja/Front/MS-IMG-CRQ-FT-2048px.jpg" alt="Carqueja">
                                                     </div>
                                                 </div>
                                                 <div class="product-card__content">
@@ -151,7 +149,7 @@
                                                 <div class="list-view-item__image-column">
                                                     <div
                                                         class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                        <img src="" alt="IMG1">
+                                                        <img src="https://misionessabor.com/images/products/FlordePiedra/Front/MS-IMG-FDP-FT-2048px.jpg" alt="Flor de Peidra">
                                                     </div>
                                                 </div>
                                                 <div class="product-card__content">
@@ -172,7 +170,7 @@
                                                 <div class="list-view-item__image-column">
                                                     <div
                                                         class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                        <img src="" alt="IMG1">
+                                                        <img src="https://misionessabor.com/images/products/HojasdeMora/Front/MS-IMG-HDM-FT-2048px.jpg" alt="Hojas de Mora">
                                                     </div>
                                                 </div>
                                                 <div class="product-card__content">
@@ -194,7 +192,7 @@
                                                 <div class="list-view-item__image-column">
                                                     <div
                                                         class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                        <img src="" alt="IMG1">
+                                                        <img src="https://misionessabor.com/images/products/IsipoMilHombres/Front/MS-IMG-IMH-FT-2048px.jpg" alt="Isipo Mil Hombres">
                                                     </div>
                                                 </div>
                                                 <div class="product-card__content">
@@ -216,7 +214,7 @@
                                                 <div class="list-view-item__image-column">
                                                     <div
                                                         class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                        <img src="" alt="IMG1">
+                                                        <img src="https://misionessabor.com/images/products/LapachoColorado/Front/MS-IMG-LC-FT-2048px.jpg" alt="Lapacho Colorado">
                                                     </div>
                                                 </div>
                                                 <div class="product-card__content">
@@ -237,7 +235,7 @@
                                                 <div class="list-view-item__image-column">
                                                     <div
                                                         class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                        <img src="" alt="IMG1">
+                                                        <img src="https://misionessabor.com/images/products/MalvaBlanca/Front/MS-IMG-MLV-FT-2048px.jpg" alt="Malva Blanca">
                                                     </div>
                                                 </div>
                                                 <div class="product-card__content">
@@ -258,7 +256,7 @@
                                                 <div class="list-view-item__image-column">
                                                     <div
                                                         class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                        <img src="" alt="IMG1">
+                                                        <img src="https://misionessabor.com/images/products/Marcela/Front/MS-IMG-MRC-FT-2048px.jpg" alt="Marcela">
                                                     </div>
                                                 </div>
                                                 <div class="product-card__content">
@@ -279,7 +277,7 @@
                                                 <div class="list-view-item__image-column">
                                                     <div
                                                         class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                        <img src="" alt="IMG1">
+                                                        <img src="https://misionessabor.com/images/products/Muerdago/Front/MS-IMG-MRD-FT-2048px.jpg" alt="Muérdago">
                                                     </div>
                                                 </div>
                                                 <div class="product-card__content">
@@ -299,7 +297,7 @@
                                                 <div class="list-view-item__image-column">
                                                     <div
                                                         class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                        <img src="" alt="IMG1">
+                                                        <img src="https://misionessabor.com/images/products/Stevia/Front/MS-IMG-STV-FT-2048px.jpg" alt="Stevia">
                                                     </div>
                                                 </div>
                                                 <div class="product-card__content">
@@ -320,7 +318,7 @@
                                                 <div class="list-view-item__image-column">
                                                     <div
                                                         class="list-view-item__image-wrapper product-card__image-wrapper">
-                                                        <img src="" alt="IMG1">
+                                                        <img src="https://misionessabor.com/images/products/Verbena/Front/MS-IMG-VRB-FT-2048px.jpg" alt="Verbena">
                                                     </div>
                                                 </div>
                                                 <div class="product-card__content">
