--- a/products/carqueja.html
+++ b/products/carqueja.html
@@ -122,7 +122,8 @@
         <div id="ms-product-tmp-div">
             <div class="ms-product-div-img">
                 <div class="ms-prd-img">
-                    <img src="https://misionessabor.com/images/products/Carqueja/Front/MS-IMG-CRQ-FT-2500px.jpg" alt="Carqueja">
+                    <img src="https://misionessabor.com/images/products/Carqueja/Front/MS-IMG-CRQ-FT-2500px.jpg"
+                        alt="Carqueja">
                 </div>
             </div>
             <div class="ms-product-dta">
@@ -191,7 +192,7 @@
             </div>
         </div>
     </main>
-    
+
     <footer>
         <div class="gp-footer">
             <div class="column logo">
@@ -555,6 +556,7 @@
             </div>
         </div>
     </footer>
+
     <script src="../scripts/collapsible.js"></script>
     <script src="../scripts/bootstrap.min.js"></script>
 </body>
