MS Update 7 (Removed relative paths, main > index)

--- a/pages/wholesale.html
+++ b/pages/wholesale.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/ms.css">
-    <link rel="stylesheet" href="../styles/bootstrap.min.css">
-
-    <link rel="stylesheet" href="../styles/announcement-bar.css" type="text/css">
-    <link rel="stylesheet" href="../styles/header.css" type="text/css">
-    <link rel="stylesheet" href="../styles/footer.css" type="text/css">
-    <link rel="stylesheet" href="../styles/wholesale.css" type="text/css">
-
+    <link rel="stylesheet" href="https://misionessabor.com/styles/ms.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/wholesale.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,7 +18,6 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
     <title>Venta al por Mayor</title>
 </head>
-
 <body>
     <header>
         <div id="ms-announcement-bar">
