--- a/pages/about.html
+++ b/pages/about.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/ms.css" type="text/css">
-    <link rel="stylesheet" href="../styles/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="../styles/announcement-bar.css" type="text/css">
-    <link rel="stylesheet" href="../styles/header.css" type="text/css">
-    <link rel="stylesheet" href="../styles/footer.css" type="text/css">
-    <link rel="stylesheet" href="../styles/about.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/ms.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/about.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
