--- a/policies/terms-of-service.html
+++ b/policies/terms-of-service.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/ms.css" type="text/css">
-    <link rel="stylesheet" href="../styles/bootstrap.min.css" type="text/css">
-    <!---->
-    <link rel="stylesheet" href="../styles/announcement-bar.css" type="text/css">
-    <link rel="stylesheet" href="../styles/header.css" type="text/css">
-    <link rel="stylesheet" href="../styles/footer.css" type="text/css">
-    <link rel="stylesheet" href="../styles/policies.css" type="text/css">
-
+    <link rel="stylesheet" href="https://misionessabor.com/styles/ms.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/policies.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,7 +18,6 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
     <title>Términos del Servicio | Misiones Sabor</title>
 </head>
-
 <body>
     <header>
         <div id="ms-announcement-bar">
@@ -1346,7 +1342,6 @@
             </div>
         </div>
     </footer>
-    <script src="../scripts/collapsible.js"></script>
+    <script src="https://misionessabor.com/scripts/collapsible.js"></script>
 </body>
-
 </html>
