--- a/products/carqueja.html
+++ b/products/carqueja.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/bootstrap.min.css">
-    <link rel="stylesheet" href="../ms.css">
-
-
-    <link rel="stylesheet" href="../styles/announcement-bar.css" type="text/css">
-    <link rel="stylesheet" href="../styles/header.css" type="text/css">
-    <link rel="stylesheet" href="../styles/footer.css" type="text/css">
-    <link rel="stylesheet" href="../styles/products.css" type="text/css">
-
+    <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="https://misionessabor.com/ms.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/products.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
-
     <title>Carqueja | Misiones Sabor</title>
 </head>
-
 <body>
     <header>
         <div id="ms-announcement-bar">
@@ -117,7 +108,6 @@
             </div>
         </nav>
     </header>
-
     <main>
         <div id="ms-product-tmp-div">
             <div class="ms-product-div-img">
@@ -192,7 +182,6 @@
             </div>
         </div>
     </main>
-
     <footer>
         <div class="gp-footer">
             <div class="column logo">
@@ -556,9 +545,7 @@
             </div>
         </div>
     </footer>
-
-    <script src="../scripts/collapsible.js"></script>
-    <script src="../scripts/bootstrap.min.js"></script>
+    <script src="https://misionessabor.com/scripts/collapsible.js"></script>
+    <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
 </body>
-
 </html>
