--- a/products/hojas-de-mora.html
+++ b/products/hojas-de-mora.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ms.css">
-    <link rel="stylesheet" href="../styles/bootstrap.min.css">
+    <link rel="stylesheet" href="https://misionessabor.com/ms.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css">
 
-    <link rel="stylesheet" href="../styles/announcement-bar.css" type="text/css">
-    <link rel="stylesheet" href="../styles/header.css" type="text/css">
-    <link rel="stylesheet" href="../styles/footer.css" type="text/css">
-    <link rel="stylesheet" href="../styles/products.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/products.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +21,6 @@
 
     <title>Hojas de Mora</title>
 </head>
-
 <body>
     <header>
         <div id="ms-announcement-bar">
@@ -115,7 +113,6 @@
             </div>
         </nav>
     </header>
-
     <main>
         <div id="ms-product-tmp-div">
             <div class="ms-product-div-img">
@@ -198,7 +195,6 @@
             </div>
         </div>
     </main>
-
     <footer>
         <div class="gp-footer">
             <div class="column logo">
@@ -562,8 +558,7 @@
             </div>
         </div>
     </footer>
-    <script src="../scripts/collapsible.js"></script>
-    <script src="../scripts/bootstrap.min.js"></script>
+    <script src="https://misionessabor.com/scripts/collapsible.js"></script>
+    <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
 </body>
-
 </html>
