--- a/products/flor-de-piedra.html
+++ b/products/flor-de-piedra.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/bootstrap.min.css">
-    <link rel="stylesheet" href="../ms.css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="https://misionessabor.com/ms.css">
 
 
-    <link rel="stylesheet" href="../styles/announcement-bar.css" type="text/css">
-    <link rel="stylesheet" href="../styles/header.css" type="text/css">
-    <link rel="stylesheet" href="../styles/footer.css" type="text/css">
-    <link rel="stylesheet" href="../styles/products.css" type="text/css">
-    <link rel="stylesheet" href="../styles/featured-products.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/products.css" type="text/css">
+    <link rel="stylesheet" href="https://misionessabor.com/styles/featured-products.css" type="text/css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -555,8 +555,8 @@
         </div>
     </footer>
 
-    <script src="../scripts/collapsible.js"></script>
-    <script src="../scripts/bootstrap.min.js"></script>
+    <script src="https://misionessabor.com/scripts/collapsible.js"></script>
+    <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
 </body>
 
 </html>
