--- a/pages/shop.html
+++ b/pages/shop.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/featured-products.css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/theme.scss.css">
@@ -12,7 +9,69 @@
     <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/shop.css">
-    <title>Compre nuestra colección entera de hierbas | Misiones Sabor</title>
+    <!--============================-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--============================-->
+    <!--===       <TITLE>        ===-->
+    <title>Compre toda nuestra colección de hierbas | Misiones Sabor</title>
+    <!--============================-->
+    <!--============================-->
+    <!--===      <KEYWORDS>      ===-->
+    <meta name="keywords" content="hierbas, hierbas aromaticas, misiones, misiones sabor, misiones sabor santa ana, sabor santa ana, 
+    misiones sabor contacto, misiones sabor hierbas, hierbas misiones, hierbas medicinales, 
+    misiones sabor hierbas naturales, misiones sabor té, misiones sabor productos, té de hierbas">
+    <meta name="description" content="Compre la colección completa Misiones Sabor. Desde paquetes de hierbas, 
+    en todos sus sabores favoritos, hay algo para cada amante de las hierbas naturales.">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow"/>
+    <meta name="content-type" content="page">
+    <meta name="categories" content="page">
+    <meta name="theme-color" content="#ffffff">
+    <!--============================-->
+    <!--============================-->
+    <!--===    <PROPERTY OG:>    ===-->
+    <meta property="og:description" content="Compre la colección completa Misiones Sabor. Desde paquetes de hierbas, 
+    en todos sus sabores favoritos, hay algo para cada amante de las hierbas naturales.">
+    <meta property="og:title" content="Compre toda nuestra colección de hierbas | Misiones Sabor">
+    <meta property="og:locale" content="es_AR">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://misionessabor.com/pages/shop">
+    <meta property="og:site" content="Misiones Sabor">
+    <meta property="og:image" itemprop="image" content="https://misionessabor.com/images/logo/SLOGO-SHARE-375x379px.webp">
+    <meta itemprop="name" content="Misiones Sabor">
+    <meta itemprop="image" content="https://misionessabor.com/images/logo/SLOGO-SHARE-375x379px.webp">
+    <!--============================-->
+    <link rel="canonical" href="https://misionessabor.com/pages/shop">
+    <!--============================-->
+    <!--============================-->
+    <!--===    <FAVICON ICON>    ===-->
+    <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon.ico">
+    <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-96x96.png" sizes="96x96">
+    <link rel="manifest" href="https://misionessabor.com/images/icons/favicons/manifest.json">
+    <link rel="mask-icon" href="https://misionessabor.com/images/icons/favicons/safari-pinned-tab.svg" color="#e4ffe4">
+    <!--============================-->
+    <link rel="apple-touch-icon" sizes="57x57" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-180x180.png">
+    <!--===================================-->
+    <!--===    <MS APPLICATION ICON>    ===-->
+    <meta name="msapplication-TileColor" content="#e4ffe4">
+    <meta name="msapplication-name" content="Misiones Sabor">
+    <meta name="msapplication-TileImage" content="https://misionessabor.com/images/icons/favicons/mstile-144x144.png">
+    <meta name="msapplication-config" content="https://misionessabor.com/images/icons/favicons/browserconfig.xml">
+    <!--==========================================================================-->
+    <!--==========================================================================-->   
 </head>
 <body>
     <header>
@@ -49,7 +108,7 @@
                             <a class="nav-link" href="https://misionessabor.com/pages/wholesale">Venta al por mayor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://misionessabor.com/pages/contact">Contacto</a>
+                            <a class="nav-link" href="https://misionessabor.com/pages/shop">Contacto</a>
                         </li>
                     </ul>
                     <div class="customer-service">
@@ -388,7 +447,7 @@
                         <a href="https://misionessabor.com/pages/about">Nosotros</a>
                     </li>
                     <li>
-                        <a href="https://misionessabor.com/pages/contact">Información de contacto</a>
+                        <a href="https://misionessabor.com/pages/shop">Información de contacto</a>
                     </li>
                 </ul>
             </div>
@@ -457,7 +516,7 @@
                                     <a href="https://misionessabor.com/pages/about.html">Nosotros</a>
                                 </li>
                                 <li class="accordion-li">
-                                    <a href="https://misionessabor.com/pages/contact.html">Información de Contacto</a>
+                                    <a href="https://misionessabor.com/pages/shop.html">Información de Contacto</a>
                                 </li>
                             </ul>
                         </div>
