--- a/index.html
+++ b/index.html
@@ -1,52 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--============================-->
+  <!--===       <STYLES>       ===-->
   <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css" type="text/css">
   <link rel="stylesheet" href="https://misionessabor.com/styles/ms.css" type="text/css">
-  <!---->
   <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
   <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
   <link rel="stylesheet" href="https://misionessabor.com/styles/banner.css" type="text/css">
   <link rel="stylesheet" href="https://misionessabor.com/styles/featured-products.css" type="text/css">
   <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
   <link rel="stylesheet" href="https://misionessabor.com/res/node_modules/@glidejs/glide/dist/css/glide.core.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <!--============================-->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--============================-->
   <!--===       <TITLE>        ===-->
-  <title>Misiones Sabor | Sabores naturales que te acompañan</title>
+  <title>Descubra Hierbas Naturales | Compre Hierbas en Línea | Misiones Sabor</title>
   <!--============================-->
   <!--============================-->
   <!--===      <KEYWORDS>      ===-->
-  <meta name="keywords" content="hierbas, hierbas aromaticas, condimentos, especias, condimentos y especias, misiones, misiones sabor,
-      misiones sabor santa ana, sabor santa ana, misiones sabor contacto, misiones sabor blog, misiones sabor blog condimentos y especias,
-      misiones sabor blog condimentos, misiones sabor blog especias, misiones sabor blog hierbas aromaticas, misiones sabor blog hierbas, 
-      misiones sabor productos">
-  <meta name="description" content="Misiones Sabor es una empresa que fracciona y envasa productos naturales. 
-          Nuestros productos van desde hierbas aromaticas, condimentos y especias, semillas, granas, yerba mate y mas. Tenemos un blog principal
-          que introduce un blog dedicado a las hierbas aromaticas y otro blog a los condimentos y especias. Contactenos o visitenos en nuestras oficinas
-          en santa ana, misiones.">
+  <meta name="keywords" content="hierbas, hierbas aromaticas, misiones, misiones sabor, misiones sabor santa ana, sabor santa ana, 
+  misiones sabor contacto, misiones sabor hierbas, hierbas misiones, hierbas medicinales, misiones sabor hierbas naturales, 
+  misiones sabor té, misiones sabor productos, té de hierbas">
+  <meta name="description" content="Bienvenido a Misiones Sabor. Explore nuestra colección de productos en línea y obtenga más información 
+  sobre nuestras paquetes de hierbas sueltas en una variedad de deliciosos sabores.">
   <meta name="robots" content="index, follow">
-  <meta name="googlebot" content="index" />
+  <meta name="googlebot" content="index, follow"/>
   <meta name="content-type" content="page">
   <meta name="categories" content="page">
   <meta name="theme-color" content="#ffffff">
   <!--============================-->
   <!--============================-->
   <!--===    <PROPERTY OG:>    ===-->
-  <meta property="og:description" content="Misiones Sabor es una empresa que fracciona y envasa productos naturales. 
-      Nuestros productos van desde hierbas aromaticas, condimentos y especias, semillas, granas, yerba mate y mas. Tenemos un blog principal
-      que introduce un blog dedicado a las hierbas aromaticas y otro blog a los condimentos y especias. Contactenos o visitenos en nuestras oficinas
-      en santa ana, misiones.">
-  <meta property="og:title" content="Misiones Sabor | Sabores naturales que te acompañan">
+  <meta property="og:description" content="Bienvenido a Misiones Sabor. Explore nuestra colección de productos en línea y obtenga más información 
+  sobre nuestras paquetes de hierbas sueltas en una variedad de deliciosos sabores.">
+  <meta property="og:title" content="Descubra Hierbas Naturales | Compre Hierbas en Línea | Misiones Sabor">
   <meta property="og:locale" content="es_AR">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://misionessabor.com">
@@ -59,7 +53,7 @@
   <!--============================-->
   <!--============================-->
   <!--===    <FAVICON ICON>    ===-->
-  <link rel="icon" href="https://misionessabor.com/images/icons/favicons/favicon.ico">
+  <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon.ico">
   <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/android-chrome-192x192.png" sizes="192x192">
   <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-16x16.png" sizes="16x16">
   <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-32x32.png" sizes="32x32">
