--- a/pages/wholesale.html
+++ b/pages/wholesale.html
@@ -1,22 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://misionessabor.com/styles/ms.css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/bootstrap.min.css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/announcement-bar.css" type="text/css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/header.css" type="text/css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/footer.css" type="text/css">
     <link rel="stylesheet" href="https://misionessabor.com/styles/wholesale.css" type="text/css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
-    <title>Venta al por Mayor</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!--============================-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--============================-->
+    <!--===       <TITLE>        ===-->
+    <title>Conviértete en un Socio | Información de Venta al por Mayor | Misiones Sabor</title>
+    <!--============================-->
+    <!--============================-->
+    <!--===      <KEYWORDS>      ===-->
+    <meta name="keywords" content="venta al por mayor, reventa, venta de hierbas, venta al por mayor de hierbas, 
+    reventa de hierbas, socio, socio de hierbas, socio de venta de  hierbas, socio de misiones sabor, hierbas, 
+    hierbas aromaticas, misiones, misiones sabor, misiones sabor santa ana, sabor santa ana, 
+    misiones sabor contacto, misiones sabor hierbas, hierbas misiones, hierbas medicinales, 
+    misiones sabor hierbas naturales, misiones sabor té, misiones sabor productos, té de hierbas">
+    <meta name="description" content="Conviertase en un revendedor comercial de nuestros productos, averigue como asociarse
+    con nosotros y beneficiarse al elevar su oferta de productos naturales al mercado.">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow"/>
+    <meta name="content-type" content="page">
+    <meta name="categories" content="page">
+    <meta name="theme-color" content="#ffffff">
+    <!--============================-->
+    <!--============================-->
+    <!--===    <PROPERTY OG:>    ===-->
+    <meta property="og:description" content="Conviertase en un revendedor comercial de nuestros productos, averigue como asociarse
+    con nosotros y beneficiarse al elevar su oferta de productos naturales al mercado.">
+    <meta property="og:title" content="Conviértete en un Socio | Información de Venta al por Mayor | Misiones Sabor">
+    <meta property="og:locale" content="es_AR">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://misionessabor.com/pages/wholesale">
+    <meta property="og:site" content="Misiones Sabor">
+    <meta property="og:image" itemprop="image" content="https://misionessabor.com/images/logo/SLOGO-SHARE-375x379px.webp">
+    <meta itemprop="name" content="Misiones Sabor">
+    <meta itemprop="image" content="https://misionessabor.com/images/logo/SLOGO-SHARE-375x379px.webp">
+    <!--============================-->
+    <link rel="canonical" href="https://misionessabor.com/pages/wholesale">
+    <!--============================-->
+    <!--============================-->
+    <!--===    <FAVICON ICON>    ===-->
+    <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon.ico">
+    <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="https://misionessabor.com/images/icons/favicons/favicon-96x96.png" sizes="96x96">
+    <link rel="manifest" href="https://misionessabor.com/images/icons/favicons/manifest.json">
+    <link rel="mask-icon" href="https://misionessabor.com/images/icons/favicons/safari-pinned-tab.svg" color="#e4ffe4">
+    <!--============================-->
+    <link rel="apple-touch-icon" sizes="57x57" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://misionessabor.com/images/icons/favicons/apple-touch-icon-180x180.png">
+    <!--===================================-->
+    <!--===    <MS APPLICATION ICON>    ===-->
+    <meta name="msapplication-TileColor" content="#e4ffe4">
+    <meta name="msapplication-name" content="Misiones Sabor">
+    <meta name="msapplication-TileImage" content="https://misionessabor.com/images/icons/favicons/mstile-144x144.png">
+    <meta name="msapplication-config" content="https://misionessabor.com/images/icons/favicons/browserconfig.xml">
+    <!--==========================================================================-->
+    <!--==========================================================================-->  
 </head>
 <body>
     <header>
@@ -44,7 +103,7 @@
                                 href="https://misionessabor.com/index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://misionessabor.com/pages/shop">Productos</a>
+                            <a class="nav-link" href="https://misionessabor.com/pages/wholesale">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://misionessabor.com/pages/about">Nosotros</a>
@@ -158,7 +217,7 @@
                     <p class="ms-whs-kp">También puede ponerse en contacto con el equipo por correo electrónico a <a
                             href="mailto:ventas@misionesabor.com">ventas@misionesabor.com</a>.</p>
                     <div>
-                        <section class="shopify-section section"></section>
+                        <section class="wholesaleify-section section"></section>
                     </div>
                 </div>
             </div>
@@ -205,7 +264,7 @@
             <div class="column dropdown closed drop-nav">
                 <h3>Navegación</h3>
                 <ul>
-                    <li><a href="https://misionessabor.com/pages/shop">Hierbas</a></li>
+                    <li><a href="https://misionessabor.com/pages/wholesale">Hierbas</a></li>
                     <li><a href="https://misionessabor.com/pages/wholesale">Venta al por Mayor</a></li>
                 </ul>
             </div>
@@ -529,5 +588,4 @@
         </div>
     </footer>
 </body>
-
 </html>
