--- a/pages/wholesale.html
+++ b/pages/wholesale.html
@@ -99,8 +99,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link"
-                                href="https://misionessabor.com/index">Inicio</a>
+                            <a class="nav-link" href="https://misionessabor.com/index">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://misionessabor.com/pages/wholesale">Productos</a>
@@ -108,8 +107,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="https://misionessabor.com/pages/about">Nosotros</a>
                         </li>
-                        <li class="nav-item active" aria-current="page">
-                            <a class="nav-link" href="https://misionessabor.com/pages/wholesale">Venta al por mayor</a>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="https://misionessabor.com/pages/wholesale">Venta al por mayor</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://misionessabor.com/pages/contact">Contacto</a>
