MS-UPDATE (Added Bootstrap to pages)

--- a/pages/about.html
+++ b/pages/about.html
@@ -545,5 +545,6 @@
             </div>
         </div>
     </footer>
+    <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
 </body>
 </html>
