--- a/pages/wholesale.html
+++ b/pages/wholesale.html
@@ -196,7 +196,7 @@
                     <p class="ms-whs-wp wp-1">Nos emociona hacer que otros se entusiasmen con las hierbas naturales.</p>
                     <p class="ms-whs-wp">Nuestro equipo trabaja arduamente para obtener y seleccionar una colección de
                         hierbas naturales de alta calidad provenientes de la región misionera.</p>
-                    <a href="https://misionessabor.com/pages/nosotros" class="ms-whs-wbtn"> <span>Nuestra
+                    <a href="https://misionessabor.com/pages/about" class="ms-whs-wbtn"> <span>Nuestra
                             Historia</span>
                         <svg width="21" height="12" viewbox="0 0 21 12" fill="#000" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -586,5 +586,6 @@
             </div>
         </div>
     </footer>
+    <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
 </body>
 </html>
