--- a/pages/contact.html
+++ b/pages/contact.html
@@ -545,5 +545,6 @@
             </div>
         </div>
     </footer>
+    <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
 </body>
 </html>
