--- a/pages/shop.html
+++ b/pages/shop.html
@@ -758,5 +758,6 @@
             </div>
         </div>
     </footer>
+    <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
 </body>
 </html>
