MS-UPDATE - (Bootstraps update v2)

--- a/pages/about.html
+++ b/pages/about.html
@@ -227,7 +227,7 @@
                 </ul>
             </div>
             <div class="column dropdown closed drop-nav">
-                <h3>Conozca Acerca de Misiones Sabor</h3>
+                <h3>Acerca De Nosotros</h3>
                 <ul>
                     <li>
                         <a href="https://misionessabor.com/pages/about">Nosotros</a>
