--- a/pages/contact.html
+++ b/pages/contact.html
@@ -227,7 +227,7 @@
                 </ul>
             </div>
             <div class="column dropdown closed drop-nav">
-                <h3>¿Quiere hablar de hierbas?</h3>
+                <h3>Acerca de Nosotros</h3>
                 <ul>
                     <li>
                         <a href="https://misionessabor.com/pages/contact">Nosotros</a>
