--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -819,6 +819,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
     <script src="https://misionessabor.com/scripts/collapsible.js"></script>
 </body>
 </html>
