--- a/policies/shipping-policy.html
+++ b/policies/shipping-policy.html
@@ -527,5 +527,6 @@
             </div>
         </div>
     </footer>
+    <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
 </body>
 </html>
