--- a/policies/terms-of-service.html
+++ b/policies/terms-of-service.html
@@ -1342,6 +1342,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
     <script src="https://misionessabor.com/scripts/collapsible.js"></script>
 </body>
 </html>
