--- a/policies/refund-policy.html
+++ b/policies/refund-policy.html
@@ -515,5 +515,6 @@
       </div>
     </div>
   </footer>
+  <script src="https://misionessabor.com/scripts/bootstrap.min.js"></script>
 </body>
 </html>
