--- a/policies/refund-policy.html
+++ b/policies/refund-policy.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="https://misionessabor.com/index">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="https://misionessabor.com">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://misionessabor.com/pages/shop">Productos</a>
