MS UPDATE ( Footer Collapsible Title fixed)

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -286,7 +286,7 @@
                     <details>
                         <summary role="button" aria-expanded="false" aria-controls="accordion-collapser-2">
                             <div class="summary__title">
-                                <h2 class="h4 accordion__title accordion-h2">¿Quiere hablar de hierbas?</h2>
+                                <h2 class="h4 accordion__title accordion-h2">Acerca de Nosotros</h2>
                             </div>
                             <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-caret"
                                 viewBox="0 0 10 6">
